# Neon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  compile_flags.txt  exec  go.mod  main.n  neon.go  neonc.go  perf.sh
frontend/ast/: ast.h  data.cpp  data.h  node.cpp  node.h
frontend/lexer/: lexer.cpp  token.cpp  tokens.h
frontend/parser/: err.cpp  firstfollow.h  grammar.cpp  grammar.h  pack.h  parser.cpp  parser.h
frontend/types/: astid.cpp  astid.h  dataid.cpp  dataid.h  tokenid.cpp
frontend/util/: cwd.cpp  cwd.h  extract_from_file.h  read_file.cpp
grammar/: grammar
include/: neonc.h
neon/: main.cpp
neon/analyzer/: analyzer.cpp  analyzer.h
neon/ast/: node.cpp  node.h
neon/builder/: build.h  build_data.h  call.cpp  expression.cpp  function.cpp  function.h  module.cpp  module.h  return.cpp  target.cpp  target.h  util.cpp  util.h  variable.cpp  variable.h
neon/lexer/: lexer.cpp  lexer.h  tokens.h
neon/neon/: main.cpp
neon/neonc/: compiler.cpp  compiler.h  main.cpp
neon/neonc/analyzer/: analyzer.cpp  analyzer.h
neon/neonc/ast/: argument.h  ast.cpp  ast.h  boolean.h  call.h  expression.h  function.h  identifier.h  node.cpp  node.h  number.h  operator.h  return.h  root.h  string.h  type.h  variable.h
neon/neonc/ast/analyzer/: analyzer.cpp  analyzer.h  err.cpp  err.h  query.cpp  query.h  scope.cpp  scope.h
neon/neonc/ast/analyzer/analyzers/: type_inference.h
neon/neonc/ast2at/: build.cpp  build.h  call.cpp  end.cpp  expression.cpp  function.cpp  return.cpp  variable.cpp
neon/neonc/at/: argument.h  at.cpp  at.h  function.cpp  function.h
neon/neonc/at/objects/: expression.h  function.h  object.h  root.h  variable.h
neon/neonc/at/objects/expression/: operator.h
neon/neonc/builder/: build.h  call.cpp  expression.cpp  function.cpp  load.cpp  module.cpp  module.h  pass.h  return.cpp  target.cpp  target.h  util.cpp  util.h  variable.cpp
neon/neonc/lexer/: lexer.cpp  lexer.h  token.cpp  token.h  tokens.h
neon/neonc/llvm/: module.cpp  module.h  pass.h  target.cpp  target.h
neon/neonc/llvm/util/: str_to_type.cpp  str_to_type.h
neon/neonc/parser/: err.cpp  err.h  grammar.cpp  grammar.h  pack.cpp  pack.h  parser.cpp  parser.h
neon/neonc/types/: astid.cpp  astid.h  position.cpp  position.h  tokenid.cpp  tokenid.h
neon/neonc/util/: clicolor.h  cwd.cpp  cwd.h  extract_from_file.cpp  extract_from_file.h  measure.cpp  measure.h  read_file.cpp  read_file.h
neon/nir/: nir.cpp  nir.h
neon/parser/: err.cpp  firstfollow.h  grammar.cpp  grammar.h  pack.cpp  pack.h  parser.cpp  parser.h
neon/types/: astid.cpp  astid.h  tokenid.cpp  tokenid.h
neon/util/: cwd.cpp  cwd.h
neonc/: builder.cpp  builder.h  compile.cpp  compile.h  file.go  main.cpp  tokenizer.go
nir/: block.cpp  block.h  build_data.h  definitions.h  function.cpp  function.h  module.cpp  module.h  objects.h  source.h  target.cpp  target.h  types.cpp  types.h
nir/llvm/: llvm.h
nir/objects/: goto.h  object.h  return.h  variable.h
nir/objects/value/: const_int.h
pkg/_enum/: data_types.go
pkg/_errors/: error.go
pkg/_lexer/: lexer.go
pkg/_neonc/: actions.go  ast.go  errors.go  grammar.go  items.go  parser.go
pkg/_parser/: item.go  parser.go
pkg/ast/: ast.go  data.go  id.go  item.go  node.go  pack.go
pkg/builder/: block.go  function.go  head.go  util.go  variable.go
pkg/compiler/: build.go  cmpl.go  compiler.go  pack.go  trigger.go  util.go  walk.go
pkg/enum/: items.go  tokens.go
pkg/err/: err.go
pkg/errors/: syntaxerror.go
pkg/lexer/: lexer.go  position.go  tokens.go
pkg/llvm/: config_llvm.go  function.go  function_type.go  llvm.go  module.go  target.go  types.go  version.go
pkg/neonc/: actions.go  ast.go  compiler.go  errors.go  file.go  items.go  lexer.go  parser.go  position.go  tokens.go
pkg/nir/: block.go  builder.go  id.go  module.go  nir.go  node.go  trigger.go  util.go
pkg/nir/objects/: const.go  goto.go  object.go  return.go  variable.go
pkg/nir/types/: types.go
pkg/parser/: analyze.go  data.go  firstfollow.go  grammar.go  lexer.go  parser.go  position.go  stack.go  token.go  tokens.go  util.go
pkg/semantic/: semantic.go
pkg/util/: assert.go  clitext.go  colors.go  file.go  measure.go  option.go  type.go
src/: main.cpp
src/ast/: ast.cpp  ast.h  data.cpp  data.h  node.h
src/lexer/: lexer.cpp  lexer.h  token.h  tokens.h
src/nir/: block.cpp  block.h  function.cpp  function.h  module.cpp  module.h  types.cpp  types.h
src/parser/: firstfollow.h  grammar.cpp  grammar.h  pack.cpp  pack.h  parser.cpp  parser.h
src/types/: astid.h  tokenid.h
src/util/: clicolor.h  measure.cpp  measure.h  read_file.h
